--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="hero">
             <div class="flex">
                 <div class="flex-1-inside">
-                    <h3>Add AI to your knowledge base</h3>
+                    <h3>Add AI</h3>
                     <img src="https://uploads-ssl.webflow.com/63c530c1a9b6a072738658d0/63d4363387e31653634efb1e_Vector%201.png"
                         alt="style">
                     <h1>Empower your employees with knowledge</h1>
